feat: add stylelint

--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -1,5 +1,5 @@
 $font-size: 16px;
-$color-white: #ffffff;
+$color-white: #fff;
 $color-light-grey: #e5eaf4;
 $color-grey: #a9b1bd;
 $color-blue: #11b0c8;
